# pynbiobsp

./: CMakeLists.txt  Makefile  README.md  pyproject.toml
include/: NBioAPI.h  NBioAPI_CheckValidity.h  NBioAPI_Error.h  NBioAPI_Type.h
scripts/: cadastro_biometria.py  conecta_banco.py  consulta_biometria.py  consultarTurma.py  test_fingerprint.py
src/: main.cpp
utils/hamster-iii/ngstardrv-v1.0.5-2-Ubuntu14.04-64bit/: ngstardrv.ko
utils/libs/RaspBerry/NBioBSP SDK_RaspberryPi v1.8940/: NBioBSP.lic
utils/libs/RaspBerry/ngstardrv-v1.0.5-3-patch2-Raspbian-ubuntuMATE-Xubuntu_16.04.2-rpi2_3/: CreateModule  README.txt  install-driver.sh  install.sh
